added font face and main first page body

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
     </header>
     <main>
-
+      <section>
+          <h1>Mathias to-do list</h1>
+          <article>
+               <button>Create a task</button> 
+               <button>Start random choice</button>
+          </article>
+      </section>  
     </main>
     <footer>
 
@@ -22,6 +28,10 @@
 </body>
 </html>
 <style>
+    @font-face {
+        font-family: mathias;
+        src: url(../futura.woff);
+    }
     body{
         margin: 0;
         padding: 0;
