made all main ui

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         font-family: futura;
         padding: 10px;
     }
+    .main_button:hover{
+        border: yellow solid 2px;
+        color: yellow;
+    }
     #main_screen > article {
         display: flex;
         justify-content: space-evenly;
