added sounds files

--- a/index.html
+++ b/index.html
@@ -68,4 +68,11 @@
         justify-content: space-evenly;
         align-items: center;
     }
+    #main_screen{
+        display: grid;
+        grid-gap: 40px;
+    }
 </style>
+<script>
+    
+</script>
