renamed choice and added ready state to doc

--- a/index.html
+++ b/index.html
@@ -84,4 +84,9 @@
             })
         })
     }
+    document.onreadystatechange = function(){
+        if (this.readyState == "complete"){
+            refresh_button()
+        }
+    }
 </script>
