added randomization screen

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <input type="text" required maxlength="400" minlength="1" placeholder="name of the task" id="create_task">    
         </form>
       </section>
+      <section id="task_choosing" inactive>
+          <h2 id="task_name">Nothing</h2>
+          <h4 id="task_id">id: 0</h4>
+      </section>
     </main>
     <footer>
 
@@ -46,7 +50,7 @@
     }
     main{
         height: 100vh;
-        width: 60%;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
