added confirm sound a declared it

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 </style>
 <script>
     let [username, id] = ["", 0] //matashi username if he is logged
+    let confirm_snd = new Audio("sounds/confirm.ogg")
     let cursor_snd = new Audio("sounds/cursor.ogg");
     let back_snd = new Audio("sounds/back.ogg");
     let tasklist = {};
