fixed font size on name and id bc too small UwU

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input type="text" required maxlength="400" minlength="1" placeholder="name of the task" id="create_task">    
         </form>
       </section>
-      <section id="task_choosing" inactive>
+      <section style="text-align: center;" id="task_choosing" inactive>
           <h2 id="task_name">Nothing</h2>
           <h4 id="task_id">id: 0</h4>
       </section>
@@ -66,13 +66,13 @@
     }
     #task_name{
         font-family: mathias;
-        font-size: larger;
+        font-size: 8vw;
         color: white;
     }
     #task_id{
         font-family: mathias;
-        font-size: medium;
-        color: white;
+        font-size: 6vw;
+        color: wheat;
     }
     .main_button{
         color: white;
