--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     }
     #task_name{
         font-family: mathias;
-        font-size: 8vw;
+        font-size: 6vw;
         color: white;
     }
     #task_id{
@@ -148,11 +148,13 @@
         }, 3000);
         interval_id = setInterval(() => {
             selected = tasklist.tasks[Math.floor(Math.random() * tasklist.tasks.length)];
+            task_name.innerText = selected.task;
+            task_id.innerText = selected.id
 
-        }, 300);
+        }, 60);
         setTimeout(() => {
             clearInterval(interval_id)
-        }, 15240);
+        }, 13240);
         
     }
     let refresh_button = () => {
