--- a/index.html
+++ b/index.html
@@ -40,4 +40,10 @@
     </footer>
 </body>
 </html>
+<script>
+    if (location.host.length == 0){
+        alert("Do no open this project as local file, thank you.")
+        document.body.innerHTML = "Unable to start the app."
+    }
+</script>
 <script src="js/app.js"></script>
