changed target and set name attr to input

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           </article>
       </section>
       <section id="create_screen" inactive>
-        <form action="./create/" method="post">
-            <input type="text" required maxlength="400" minlength="1" placeholder="name of the task" id="create_task">    
+        <form action="./create.php/" method="post">
+            <input name="taskname" type="text" required maxlength="400" minlength="1" placeholder="name of the task" id="create_task">    
         </form>
       </section>
       <section style="text-align: center;" id="task_choosing" inactive>
